[package]
name = "actix-toolbox"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/myOmikron/actix-toolbox"
license = "MIT"
authors = ["myOmikron <git@omikron.dev>"]
description = "Toolbox for enhancing actix-web functionalities"

[dependencies]
# webframework
actix-web = { version = "~4.2" }
actix-session = { version = "~0.7" }

# time library
chrono = { version = "~0.4" }

# serialization
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
byte-unit = { version = "~4.0", features = ["serde"] }

# logging
log = { version = "~0.4" }
log4rs = { version = "~1.2", features = ["gzip"] }

# error handling. Required by actix-session
anyhow = { version = "~1.0" }
# async traits. Required by actix-session
async-trait = { version = "~0.1" }

# rng
rand = { version = "~0.8" }

# orm
rorm = { version = "~0.4"}

# uuid
uuid = { version = "~1.2", features = ["v4"] }
