[package]
name = "actix-toolbox"
version = "0.7.1"
edition = "2021"
repository = "https://github.com/myOmikron/actix-toolbox"
license = "MIT"
authors = ["myOmikron <git@omikron.dev>"]
description = "Toolbox for enhancing actix-web functionalities"

[[example]]
name = "websockets"
required-features = [
    "ws",
    "tokio/macros",
    "tokio/rt",
    "tokio/rt-multi-thread",
]

[dependencies]
# webframework
actix = { version = "~0.13", optional = true }
actix-web = { version = "~4.2" }
actix-session = { version = "~0.7" }
actix-web-actors = { version = "~4.1", optional = true }

# time library
chrono = { version = ">=0.4.20" }

# serialization
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
byte-unit = { version = "~4.0", features = ["serde"] }

# logging
log = { version = "~0.4" }
log4rs = { version = "~1.2", features = ["gzip"] }

# error handling. Required by actix-session
anyhow = { version = "~1.0" }
# async traits. Required by actix-session
async-trait = { version = "~0.1" }

# rng
rand = { version = "~0.8" }

# orm
rorm = { version = "~0.4"}

# uuid
uuid = { version = "~1.2", features = ["v4"] }

# channels
tokio = { version = "~1.23", optional = true }

# async util
futures = { version = "~0.3", optional = true }

[package.metadata.docs.rs]
features = ["ws"]

[features]
ws = [
    "actix",
    "actix-web-actors",
    "tokio",
    "futures",
]